# Personality-assistant-changer

./: .gitignore  AGENT_SYSTEM_README.md  IMPLEMENTATION_SUMMARY.md  README.md  README_old.md  TOOLS_AND_TESTING_OVERVIEW.md  UI_MOCKUP.md  agent_hierarchy.txt  ai_agent.py  ai_agent_old.py  demo_complete_system.py  demo_personality.py  main.py  main_old.py  pyproject.toml  requirements.txt  speech_to_text.py  start_system.sh  test_agent_system.py  test_integration.py  test_personality.py  test_personality_simple.py  text_to_speech.py  tools.py  ui_mockup.html  ui_mockup.py  vercel.json
agents/: __init__.py  base.py  personas.py  platforms.py  reflection.py  supervisor.py
backend/: main.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
